tests/ui/const-generics/generic_const_exprs/issue-109141.stderr
error[E0425]: cannot find value `HashesEntryLEN` in this scope
  --> $DIR/issue-109141.rs:10:32
   |
LL | struct EntriesBuffer(Box<[[u8; HashesEntryLEN]; 5]>);
   |                                ^^^^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a const parameter
   |
LL | struct EntriesBuffer<const HashesEntryLEN: /* Type */>(Box<[[u8; HashesEntryLEN]; 5]>);
   |                     ++++++++++++++++++++++++++++++++++

error[E0596]: cannot borrow `*self.0` as mutable, as it is behind a `&` reference
  --> $DIR/issue-109141.rs:6:9
   |
LL |         self.0.iter_mut()
   |         ^^^^^^^^^^^^^^^^^ `self` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
help: consider changing this to be a mutable reference
   |
LL |     fn a(&mut self) -> impl Iterator {
   |          ~~~~~~~~~

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0596.
For more information about an error, try `rustc --explain E0425`.
